Fix tooltips creating horizontal scrollbars

--- a/scss/modules/_base.scss
+++ b/scss/modules/_base.scss
@@ -11,4 +11,9 @@
     background: url('#{$asset-path}img/image-background-paper.png') repeat-y center top $light-grey;
     background-size: cover;
   }
+  
+  .wrapper {
+    // So tooltips do not create horizontal scrollbars
+    overflow-x: hidden;
+  }
 }
